catalogue/catalogue-dep-ser.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue
  labels:
    name: catalogue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogue
  template:
    metadata:
      labels:
        app: catalogue
    spec:
      containers:
      - name: catalogue
        image: rayanah/catalogue 
        ports:
        - containerPort: 80
        securityContext:
          runAsUser: 0
          readOnlyRootFilesystem: true
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue
  labels:
    app: catalogue
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: catalogue
