catalogue/cataloguedb-dep-ser-ingress.yaml
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: catalogue-db
  namespace: test
  labels:
    app: catalogue-db
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: catalogue-db
  template:
    metadata:
      labels:
        app: catalogue-db
    spec:
      containers:
      - name: catalogue-db
        image: weaveworksdemos/catalogue-db:0.3.0
        resources:
          limits:
            cpu: 300m
            memory: 1000Mi
          requests:
            cpu: 100m
            memory: 300Mi
        ports:
        - containerPort: 80
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue-db
  labels:
    app: catalogue-db
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30007
  selector:
    app: catalogue-db
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: catalogue-db-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: catalogue-db
          servicePort: 80
